--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Happy Teachers' Day - One Piece Theme</title>
+  <title>Pa-open Sir</title>
   <link href="https://fonts.googleapis.com/css2?family=Pirata+One&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
     :root{
